@@ -1,5 +1,7 @@
 * 1.8.0
     - Add approve/reject on insert triple
+    - Add service remove triple
+
 * 1.7.0
     - Add language to export
 
